styles/styles.css
/* ... */
.about_section section table {
    width:100%;

}
.about_section section dl  /*Lachlan - Contributions list*/
{
    background-color: #121212;
    width:fit-content;
    padding:1%;
    display: block;
    border-radius: 25px;
}
.about_section section dl dt {
    background-color: #2e2e2e;
    border-radius: 25px;
    text-align: center;
}
.about_section section dl dd {
    margin:0;
    text-align: center;
}
.about_section section table dl { /*Lachlan - related to table for likes etc*/
    background-color: #454545;
}
.about_section section table dt {
    font-weight: bold;
}
.about_section section table tr th {
    background-color: #2e2e2e;
}
.about_section section table tr td {
    background-color: #1e1e1e;
    padding-left: 10px;
    height:20px;
}

.about_section_headshot{ /*This class was originally made by matthew, edited by lachlan*/
    width:25%;
    border: 5px solid rgb(146, 141, 255);
    border-radius: 25px;
    float:right;
}
.about_section_id{ /*For student id */
    text-align: center; /*This class was originally made by matthew, edited by lachlan*/
}

.about_background {
    background-image: url("images/stock_keyboard_2.png"); /* https://unsplash.com/photos/focus-photography-of-computer-keyboard-with-red-lights-feXpdV001o4*/
    background-size: cover;
    background-attachment: fixed;
}

/*=========================================================================*/

/*=========================================================================*/
/*apply.html*/
/*=========================================================================*/
.site_form_title {
    animation: site_content_fadein forwards 5s;
}
.site_form_background {
    background-image: url("images/stock_keyboard.png"); /*https://unsplash.com/photos/closeup-photo-of-computer-keyboard-WkfDrhxDMC8*/
    background-size: cover;
    background-attachment: fixed;
}
.site_form_container { /*Lachlan - For the container that contains all the form submission things*/
    background-color: rgb(26, 26, 26);
    padding: 1%;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.site_form_container_section{ /*Lachlan - For the legends inside of a site_form_container*/
    background-color: #131313;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 15px;
}
.site_form_container_section > * { /* Lachlan - Make all contents of the site_form_container_section classes use the fadein animation over 6 seconds*/
    animation: site_content_fadein forwards 6s;
}
.site_form_container_section legend { /*Lachlan*/
    float:left; /*Lachlan - Force legend to go inside form area*/
    padding-bottom: 0.5%; /*Lachlan - Make sure theres a gap between it and elements below*/
}
.site_form_container_section input, .site_form_container_section select {
    max-width: 25%; /*Lachlan - Simply to fix a bug where the date and select job reference inputs' width was filling the entire div*/
}
.site_form_submit_area { /*Lachlan - For the submit and reset buttons, makes sure they are spread evenly horizontally*/
    display:flex;
    flex-direction: row;
    justify-content: space-evenly; 
}
.site_form_submit{ /*Lachlan - Size and colour for submit button on application form*/
    width:45%;
    height:40px;
    background-color:rgb(52, 143, 90);;
}

.site_form_submit:hover{ background-color: rgb(37, 104, 65); } /*Lachlan - hover colour for submit*/

.site_form_reset{ /*Lachlan - Size and colour for reset button on application form*/
    width:45%;
    height:40px;
    background-color: rgb(255, 88, 88);
}

.site_form_reset:hover{ background-color: rgb(169, 76, 76); } /*Lachlan - hover colour for reset*/

/*=========================================================================*/


/*=========================================================================*/
/*Top bar*/
/*=========================================================================*/
.site_header_company_logo {height: 100%;} /*Lachlan - Make sure logo doesn't become larger 
than header by setting it to, and thus restricting it to 100%*/
.site_header_menu_image {height: 50%; width:auto; min-height: 10px; min-width: 10px;} /*Lachlan - For the menu button for the dropdown menu*/

.site_header_item{ /*Lachlan - Just related to layout stuff*/
    height: 100%;
    align-content: center;
}

.site_header_navbuttons{ /*Lachlan - Just related to layout stuff*/
    height: 100%;
    display:flex;
    flex-direction: row;
    width:100%;
    justify-content: space-between;
    padding-left: 2.5%;
    padding-right: 2.5%;
    padding-top: 0.35%;
}
.site_header_navbuttons a  { /*For each button of the the nav buttons section that appears when the page is large enough*/
    align-content: center;
    background-color: #323232;
    padding-left: 4.5%;
    padding-right: 4.5%;
    text-decoration: none;
    height: 80%;
    vertical-align: middle;
    color: aliceblue;
}
.site_header_navbuttons a:hover {
    background-color: #232323;
}
/*Lachlan, conditional based on screen width from stackoverflow answer
https://stackoverflow.com/questions/18776322/can-i-hide-the-element-if-it-doesnt-fit-the-available-width-using-css-only*/
@media screen and (max-width:1000px){
    .site_header_navbuttons{display:none;}
}
#site_header{ /*Lachlan - actual class for the header at the top of the page */
    /*Not to be confused with HTML Header tags for metadata, this is for the topbar*/
    background-color: rgba(25,25,25);/* rgb(32, 42, 179);*/
    display: flex;
    flex-direction: row;
    height:50px;
    width:100%;
}
/* ... */

